syntax = "proto3";
package trading;

option csharp_namespace = "SimpleCoinTrading.Server";

message PositionDto {
  string algorithm_id = 1;
  string symbol = 2;
  double net_qty = 3;
  double avg_price = 4;
  double last_price = 5;
  double realized_pnl = 6;
  double unrealized_pnl = 7;
  int64 updated_at_unix_ms = 8;
}

message GetPositionsRequest { string algorithm_id = 1; } // empty면 전체
message GetPositionsResponse { repeated PositionDto positions = 1; }

message PositionUpserted { PositionDto position = 1; }
message PositionRemoved { string algorithm_id = 1; string symbol = 2; } // net=0이면 remove로도 가능

message PositionUpdate {
  oneof payload {
    PositionUpserted upserted = 1;
    PositionRemoved removed = 2;
  }
}

service PositionStateService {
  rpc GetSnapshot(GetPositionsRequest) returns (GetPositionsResponse);
  rpc Subscribe(GetPositionsRequest) returns (stream PositionUpdate);
}
